samples/_failures_safe/1761294480_a75145_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3e364bc.c: In function ‘main’:
./samples/SAFE/__tmp_e3e364bc.c:167:40: error: expected ‘]’ at end of input
  167 |     TokenHandler handlers[TOKEN_UNKNOWN
      |                                        ^
      |                                        ]
./samples/SAFE/__tmp_e3e364bc.c:167:5: error: expected declaration or statement at end of input
  167 |     TokenHandler handlers[TOKEN_UNKNOWN
      |     ^~~~~~~~~~~~
